src/css/dataCard.sass
@use './jsonViewerTheme.sass'

.dataCardsContainer
  display: flex
  gap: 10px
  .dataCardItem
    background: #0000001e
    min-width: 8rem
    display: flex
    flex-direction: column
    align-items: center
    justify-content: center
    border-radius: 6px
    padding:20px

  .dataCardTile
    color: $white
    font-size: 0.8rem

  .dataCardData
    color: $primary
    font-size: 1.3rem
    line-height: 1.5rem

  .balance
    width: fit-content

@media screen and (max-width: 650px)
  .dataCardItem
    padding: 10px !important
    margin-top:-12px

